--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <ul>
                 <li><strong>2004:</strong> Inclui sua estreia no teatro com Billy Elliot, o musical .</li>
                 <li><strong>2012:</strong> Sua estreia no cinema em, O Impossível ".</li>
+                
                 <li><strong>2016:</strong> Sua ascensão à fama com o papel de Homem-Aranha no Universo Cinematográfico Marvel (MCU), começando com Capitão América: Guerra Civil ".</li>
                 <li><strong>2017:</strong> Sua carreira continuou com filmes como Homem-Aranha: De Volta ao Lar .</li>
                 <li><strong>2023:</strong> incluindo outros projetos como a série The Crowded Room.</li>
@@ -143,6 +144,13 @@
             <h2>Mais Informações</h2>
             <p><a href="https://pt.wikipedia.org/wiki/Tom_Holland_(ator)" target="blank">Leia mais na Wikipédia</a></p>
         </section>
+         <h2>Homem-Aranha</h2>
+        <div class="video-section">
+            <iframe width="640" height="360"
+         src="https://www.youtube.com/embed/1liquoL2qQM?si=J-RjZdJpIYdPiEsK" title="Vídeo Principal" frameborder="2" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+        </div></div>
+
     </main>
 
     <footer>
